OKAY NA MEDYO LOCALHOST DATABASE HAHA